--- a/index.html
+++ b/index.html
@@ -27,5 +27,12 @@
   <div class="left"></div>
   <div class="right"></div>
   <script src='bundle.js'></script>
+  <script src='js/main.js'></script>
+  <script type='text/javascript'>
+    var socket = io.connect('/');
+    socket.on('onconnected', function(data) {
+      console.log('Connected successfully to the socket.io server. My server side ID is + data.id');
+    });
+  </script>
 </body>
 </html>
