--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
   <div class="right"></div>
   <script src='bundle.js'></script>
   <script src='js/main.js'></script>
+
+  <!-- added by Lizza: 10/03/2017 -->
+  <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+  <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+  <!-- added by Lizza: 10/03/2017 -->
+  
   <script type='text/javascript'>
     var socket = io.connect('/');
     socket.on('onconnected', function(data) {
